--- a/style/styles.css
+++ b/style/styles.css
@@ -1,86 +1,217 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 *{
+    font-family: 'Open Sans', sans-serif;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+}
+.gradient{
+    background-color: rgb(241, 241, 241);
+    background-image:  url("./static/8.png");
+    opacity: 1;
+    height: 100vh;
+    z-index: -1;
 }
 
-body{
-    background-color:#7C83FD;
-}
-
+/* --------navbar---------- */
 .headerback{
     width: 100%;
-    height:40rem;
+    height: 40rem;
     position:absolute;
 }
 .navbar{
-    display:flex;
+    display: flex;
     flex-direction: row;
-    z-index: 1;
-    padding: 0px 7px;
-    /* position: absolute;  */
+    padding-top: 1.5rem;
+}
+.left-navber{
+    display: flex;
+    flex-direction: row;
+    margin-left: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 .left-navber ul{
     display: flex;
-    flex-direction: row;    
-
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-
+.left-navber img{
+    width: 50px;
+    height: 50px;
+}
 .left-navber ul li{
-  list-style-type: none;
-  margin : 35px 30px; 
-  font-size:1.2rem;
-  
+    font-size: 23px;
+    font-weight: bolder;
+    text-decoration: none;
+    list-style: none;
+    /* margin: 0px 15px; */
+    margin-right: 30px;
+    color: white;
 }
 .right-navber{
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
+    margin-right: 3rem;
 }
-
 .login{
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
+    margin-right: 1rem;
+}
+.login h3{
+    font-size: 23px;
+    font-weight: bolder;
+    color: white;
 }
 .register{
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
+    margin-left: 1rem;
+}
+.register h3{
+    font-size: 23px;
+    font-weight: bolder;
+    color: white;
 }
 
-
-
-
-
+/* --------mainpage---------- */
+.mainhomepage{
+    display: flex;
+    flex-direction: column;
+    margin-top: 7rem;
+}
 .mainflex{
-    display:flex;
-    flex-direction:row;
-    border-top: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    height: ;
+
 }
-
-
 .leftmain{
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content:center;
-    margin-left:50px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10rem;
 }
-
-
 .selectgoals{
-    margin-bottom:300px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5rem;
 }
-
+.selectgoals h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 .maintitie{
-    width:500px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 2rem;
+}
+.maintitie h1{
+    font-weight: bolder;
+    font-size: 5rem;
+}
+.maintitie h4{
+    font-weight: normal;
+    font-size: 1.5rem;
+}
+.searchbar input{
+    width: 35rem;
+    height: 3.5rem;
+    border: 1px solid grey;
+    border-radius: 100px;
+    padding-inline-start: 15px;
 }
 .rightmian{
-    visibility:hidden;
+    align-items: center;
+}
+.rightmian img{
+    width: 500px;
+    height: 400px;
+    opacity: 1;
+}
+.councelling h3{
+    margin-top: 0rem;
+    justify-content: center;
+    align-items: center;
+}
+.councelling{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 1rem;
 }
 
-
-.mainhomepage{
-
+/* -------moreabout--------- */
+.moreabout{
+    margin-top: 0rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem;
+    background-color: rgb(202, 240, 255);
+}
+.courses-heading{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.courses-heading h2{
+    font-weight: bold;
+    font-size: 2rem;
+}
+.courses-cards{
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+    padding: 20px;
+    border: 12px solid rgb(0, 217, 255);
+    width: 20rem;
+    height: 22rem;
+    border-radius: 20%;
+    margin: 0rem 2rem;
+}
+.card-title{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
+}
+.logo{
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+}
+.logo img{
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+}
+.course-title{
+    margin-left: 10px;
+}
+.course-title h3{
+    font-size: 2rem;
+    font-weight: initial;
+}
+.course-title h4{
+    font-size: 1rem;
+    font-weight: initial;
+}
+.card ul{
+    display: flex;
+    flex-direction: column;
+}
+.card ul li{
+    font-size: 20px;
+    text-decoration: none;
+    list-style: circle;
+    color: rgb(0, 0, 0);
 }
